[project]
name = "llm-replicate"
version = "0.1"
description = "LLM plugin for models hosted on Replicate"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    # vendored_replicate:
    "requests",
    "packaging"
]
requires-python = ">3.7"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/simonw/llm-replicate"
Changelog = "https://github.com/simonw/llm-replicate/releases"
Issues = "https://github.com/simonw/llm-replicate/issues"

[project.entry-points.llm]
replicate = "llm_replicate"